--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,3 +26,11 @@ steps:
 - script: npm run cy:chrome
   displayName: 'Run tests on Chrome'
   continueOnError: true
+
+- task: PublishTestResults@2
+  displayName: 'Exibindo resultados dos testes'
+  inputs:
+    testResultsFiles: '**/junit-*.xml'
+    mergeTestResults: true
+    testRunTitle: 'Agilizei Bootcamp N2'
+  continueOnError: true
