Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,10 @@ steps:
   displayName: 'Run tests on Chrome'
   continueOnError: true
 
+- script: npm run cy:firefox
+  displayName: 'Run tests on Firefox'
+  continueOnError: true
+
 - task: PublishTestResults@2
   displayName: 'Exibindo resultados dos testes'
   inputs:
